# Python_Module_08

ex0/: construct.py
ex01/: loading.py  pyproject.toml  requirements.txt
ex02/: .env.example  .gitignore  oracle.py
